# python-zohal-sdk

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: check_card_with_national_code.py  national_identity_inqiry.py  shahkar.py
zohal_sdk/: __init__.py  client.py  constants.py  exceptions.py
zohal_sdk/models/: __init__.py  account_to_iban.py  card_inquiry.py  card_to_account.py  card_to_iban.py  check_card_with_name.py  check_card_with_national_code.py  check_iban_with_name.py  iban.py  national_identity_inquery.py  persian_to_finglish.py  postal_code_inquiry.py  shahkar.py  types.py
zohal_sdk/services/: __init__.py  inquiry.py
zohal_sdk/types/: __init__.py  bank.py  base.py  finglish.py  matched.py  national_card.py  national_identity.py  postal.py  shahkar.py
zohal_sdk/utils/: __init__.py  url.py
