[tool.poetry]
name = "zohal-sdk"
version = "0.1.0"
description = ""
authors = ["Alireza Rabie <alireza@aazerra.dev>"]
readme = "README.md"
packages = [{ include = "zohal_sdk" }]

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
